Shrunk images for faster load, added active page navbar styling, fixed css for window resizing wrapping bug in navbar, changed h2/h3 font size ratio

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html, body {
 
 .site-main {
   padding-top: 3%;
-  padding-bottom: 5%;
+  padding-bottom: 3%;
 }
 
 #clock-countdown span {
@@ -18,10 +18,6 @@ html, body {
 #clock-countdown {
   margin-top: -15px;
   margin-bottom: 15px;
-}
-
-body.main {
-  overflow-y: hidden;
 }
 
 body {
@@ -98,9 +94,8 @@ body {
   letter-spacing: 0.5px;
   font-weight: 300;
   padding-top: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
   border: 0;
+  /*border-color: #000000;*/
 }
 
 .navbar-brand {
@@ -131,7 +126,7 @@ body {
 
 /* Collapsible three bar button */
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .navbar-default .navbar-nav .open .dropdown-menu > li:hover {
@@ -152,18 +147,6 @@ body {
   background-color: #555555;
 }
 
-#navbar > ul > li > a:hover {
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-#navbar > ul > li > a {
-  color: white;
-  border: 0;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-transform: uppercase;
-}
-
 .navbar-inverse #navbar > ul > li > a, .navbar-inverse #navbar > ul > li > a:focus {
   background-color: transparent;
   color: #555555;
@@ -181,14 +164,38 @@ body {
 
 /* Avoid propagation to dropdown */
 #navbar > ul > li > a {
+  color: white;
+  border: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-transform: uppercase;
   line-height: 30px;
   height: 60px;
+}
+
+#navbar > ul > li > a:hover {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 #navbar li.divider {
   margin: 1px;
   background-color: white;
   margin: 0px 6px;
+}
+
+.navbar .navbar-nav > .active {
+  color: #008BBC !important;
+/*  border-bottom: 2px solid #008BBC !important;*/
+}
+
+.navbar .navbar-nav > .active:after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 80%;
+  top: 100%;
+  left: 10%;
+  border: 2px solid #008BBC;
 }
 
 .navbar-inverse #navbar li.divider {
@@ -204,9 +211,6 @@ body {
   text-align: center;
 }
 
-.counter-container {
-}
-
 .text-vertical-center {
   display: table-cell;
   margin-left: auto;
@@ -216,11 +220,11 @@ body {
 }
 
 .section-title {
-  font-size: 42px;
+  font-size: 45px;
 }
 
 .section-subtitle {
-  font-size: 30px;
+  font-size: 22px;
 }
 
 .home-title {
